samples/_failures_safe/1761698830_6ab8ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83cb66a6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_83cb66a6.c:169:13: error: expected declaration or statement at end of input
  169 |             success = 1;
      |             ^~~~~~~
./samples/SAFE/__tmp_83cb66a6.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83cb66a6.c:169:13: error: expected declaration or statement at end of input
